fixed card on smaller screens, removed navbar options on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.6;
   overflow-y: scroll;
   overflow-x: hidden;
+  width: 100%;
 }
 
 ul {
@@ -39,7 +40,7 @@ img {
 }
 
 .container {
-  max-width: 69rem;
+  width: 100%;
   margin: 0 auto;
   padding: 0 2.3rem;
 }
@@ -74,6 +75,7 @@ img {
   background-color: #fff;
   max-height: fit-content;
   border-bottom: 1px solid #333;
+  width: auto;
 }
 
 .navbar .container {
@@ -332,5 +334,27 @@ input.btn {
   }
   .footer {
     margin-top: 15rem;
+  }
+
+  .navbar .logo {
+    line-height: 0.8;
+    font-weight: 300;
+    font-size: 1.7rem;
+  }
+
+  .navbar .container ul li {
+    display: none;
+  }
+
+  .card {
+    color: #333;
+    background-color: #fff;
+    border-radius: 0.7rem;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    padding: 1.4rem;
+    margin: 0.7rem;
+    position: relative;
+    left: 0.8rem;
+    width: 90%;
   }
 }
